fix map not showing when add an event on the app

--- a/css/events.css
+++ b/css/events.css
@@ -46,22 +46,29 @@ a:visited:active {
 }
 
 .description{
-    
     text-align: left;
-    padding-left: 5px;
-    padding-right: 5px;
+
 }
 .imgclass{
     width:100%;
-    
     align-content: center;
 }
 
+#rsvp{
+    background-color: #33acaf;
+    border-radius: 3px;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    color: #fff;
+    border: none;
+    width: 80px;
+    margin-bottom: 5px;
+    margin-left: 5px;
+}
 .map {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
-    width: 75%;
+    width: 100%;
     height: 250px;
 }
 #eventTitle {} #imag {
